--- a/dockerfile-marinara
+++ b/dockerfile-marinara
@@ -9,6 +9,8 @@ RUN tdnf install -y shadow-utils python3 dnf && tdnf clean all
 
 COPY scripts/ /usr/sbin/
 
+RUN chmod +x /usr/sbin/*
+
 # Squash image layers into one layer.
 FROM scratch
 
