--- a/dockerfiles/dockerfile-new-image
+++ b/dockerfiles/dockerfile-new-image
@@ -14,6 +14,22 @@ ARG USER="root"
 ARG USER_UID=0
 ARG USER_GID=${USER_UID}
 
+ARG LOCAL_REPO_PATH="/localrepo" 
+ARG RPMS
+
+COPY ${RPMS} /WORKDIR/RPMS
+COPY local.repo /WORKDIR/REPO/local.repo
+
+RUN if [ "${RPMS}" ]; then \
+    mkdir -p $LOCAL_REPO_PATH; \
+    tdnf install -y createrepo; \
+    cp -r /WORKDIR/RPMS ${LOCAL_REPO_PATH}; \
+    cp /WORKDIR/REPO/local.repo /etc/yum.repos.d/local.repo; \
+    createrepo --database ${LOCAL_REPO_PATH} --workers 10; \
+    tdnf makecache \&\& tdnf makecache; \
+    tdnf autoremove -y createrepo; \
+fi
+
 RUN marinaracreate.py \
     --image-type "${IMAGE_TYPE}" \
     --mariner-version "${MARINER_VERSION}" \
