--- a/dockerfiles/dockerfile-new-image
+++ b/dockerfiles/dockerfile-new-image
@@ -20,13 +20,16 @@ ARG RPMS
 COPY ${RPMS} /WORKDIR/RPMS
 COPY local.repo /WORKDIR/REPO/local.repo
 
+# Create local repo if RPMS are provided
+# This will allow the user to install packages from the local repo
+# instead of fetching from PMC
 RUN if [ "${RPMS}" ]; then \
     mkdir -p $LOCAL_REPO_PATH; \
     tdnf install -y createrepo; \
     cp -r /WORKDIR/RPMS ${LOCAL_REPO_PATH}; \
     cp /WORKDIR/REPO/local.repo /etc/yum.repos.d/local.repo; \
     createrepo --database ${LOCAL_REPO_PATH} --workers 10; \
-    tdnf makecache \&\& tdnf makecache; \
+    tdnf makecache; \
     tdnf autoremove -y createrepo; \
 fi
 
