--- a/dockerfile-marinara
+++ b/dockerfile-marinara
@@ -1,11 +1,12 @@
 # Copyright (c) Microsoft Corporation.
 # Licensed under the MIT License.
 
-ARG MARINER_VERSION=2.0
+ARG AZL_VERSION=2.0
+ARG NAMESPACE=cbl-mariner
 
-FROM mcr.microsoft.com/cbl-mariner/base/core:${MARINER_VERSION} as installer
+FROM mcr.microsoft.com/$NAMESPACE/base/core:${AZURE_LINUX_VERSION} as installer
 
-RUN tdnf install -y shadow-utils python3 dnf && tdnf clean all
+RUN tdnf install -y --releasever=$AZL_VERSION shadow-utils python3 dnf && tdnf clean all
 
 COPY scripts/ /usr/sbin/
 
