--- a/dockerfile-marinara
+++ b/dockerfile-marinara
@@ -1,6 +1,8 @@
 # Copyright (c) Microsoft Corporation.
 # Licensed under the MIT License.
 
+# For Azure Linux 3.0 image,
+# pass 3.0 as a value for AZL_VERSION and azurelinux as a value for NAMESPACE.
 ARG AZL_VERSION=2.0
 ARG NAMESPACE=cbl-mariner
 
