--- a/dockerfile-marinara
+++ b/dockerfile-marinara
@@ -1,11 +1,16 @@
 # Copyright (c) Microsoft Corporation.
 # Licensed under the MIT License.
 
-ARG MARINER_VERSION=2.0
+# For Azure Linux 3.0 image,
+# pass 3.0 as a value for AZL_VERSION and azurelinux as a value for NAMESPACE.
+ARG AZL_VERSION=2.0
+ARG NAMESPACE=cbl-mariner
 
-FROM mcr.microsoft.com/cbl-mariner/base/core:${MARINER_VERSION} as installer
+FROM mcr.microsoft.com/$NAMESPACE/base/core:${AZL_VERSION} as installer
 
-RUN tdnf install -y shadow-utils python3 dnf && tdnf clean all
+ARG AZL_VERSION=2.0
+
+RUN tdnf install -y --releasever=${AZL_VERSION} shadow-utils python3 && tdnf clean all
 
 COPY scripts/ /usr/sbin/
 
