--- a/examples/nodejs/dockerfile
+++ b/examples/nodejs/dockerfile
@@ -1,7 +1,10 @@
 # Copyright (c) Microsoft Corporation.
 # Licensed under the MIT License.
 
-FROM mcr.microsoft.com/cbl-mariner/base/nodejs:16 AS nodejs-builder
+# For Azure Linux 3.0 image, pass azurelinux as a value for NAMESPACE
+ARG NAMESPACE=cbl-mariner
+
+FROM mcr.microsoft.com/${NAMESPACE}/base/nodejs:18 AS nodejs-builder
 
 WORKDIR /app
 
@@ -11,7 +14,7 @@ COPY server.js .
 RUN npm install
 
 # Assuming this image name was used while creating the distroless nodejs image using Marinara.
-FROM distroless/nodejs:16
+FROM distroless/nodejs:18
 
 WORKDIR /app
 
