--- a/dockerfiles/dockerfile-new-image
+++ b/dockerfiles/dockerfile-new-image
@@ -44,7 +44,7 @@ RUN if [ "${RPMS}" ]; then \
     tdnf install -y createrepo; \
     cp -r /WORKDIR/RPMS ${LOCAL_REPO_PATH}; \
     cp /WORKDIR/REPO/local.repo /etc/yum.repos.d/local.repo; \
-    createrepo --database ${LOCAL_REPO_PATH} --workers 10; \
+    createrepo --compatibility --database ${LOCAL_REPO_PATH} --workers 10; \
     tdnf makecache; \
     tdnf autoremove -y createrepo; \
 fi
